# easyZloc

./: .gitattributes  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  unused_reqs.txt  util.py
.circleci/: config.yml
autofocus/: autofocus-timelapse-stack.ipynb  autofocus.ipynb  drift_example.ipynb  eval_model_noisy.ipynb
config/: datafiles.py  datasets.py
data/: align_psfs.py  datasets.py  estimate_offset.py  prep_for_pr.py  sphere_datasets.py  visualise.py
debug_tools/: dataset_curator.ipynb  dataset_curator.py  dataset_curator_v2-example.ipynb  dataset_curator_v2.ipynb  dataset_explorer.ipynb  est_calibration_stack_error.py  merge_images.ipynb  psf_comparison.py  roi_extractor.ipynb  stacks_2_gifs.py  subsample_calibration_dataset.py  true_0_experiment.ipynb  view_dataset_psfs.py  view_psf_correlation.py
experiments/: GMM_experiment.ipynb  Image alignment using c-splines.ipynb  Sphere dataset.ipynb  Trans-illumination phase retrieval.ipynb  Vectorial PSF implementation.ipynb  autokeras.ipynb  bead_selection.ipynb  coords_modelling_vit_012.py  cross_val.ipynb  data_comparison.ipynb  dataset_classifier.py  deep learning error exploration.ipynb  deep_learning.py  deep_learning_exec.py  deep_learning_shap.py  deep_learning_torch.py  denoiser.ipynb  est_offset.ipynb  est_offset3.ipynb  est_offset_old.ipynb  est_sphere_density.py  fake_bead_stack_generator.ipynb  fov_variation.py  gaussian_miqi.ipynb  main-bayesian.ipynb  main-checkpoint.ipynb  main-convnext.ipynb  main-nanopore.ipynb  main-train_multiple_datasets.ipynb  (+32 more)
(+246 files in other folders)
